# parodus2rbus

./: .gitignore  CMakeLists.txt  DEBIAN_PACKAGING.md  README.md  test_extended_ops.json
.github/workflows/: build-debian.yml  test-build.yml
config/: auth_config.json
debian/: changelog  control  copyright  rules
include/: auth.h  auth_init.h  cache.h  config.h  log.h  notification.h  parodus_iface.h  performance.h  protocol.h  rbus_adapter.h  webconfig.h
scripts/: build-deb.sh
src/: auth.c  auth_init.c  cache.c  config.c  log.c  main.c  notification.c  parodus_iface.c  performance.c  protocol.c  rbus_adapter.c  webconfig.c
